tests/ivg/invalid/radial_gradient_radius_out_of_range.ivg
format IVG-3
wipe gradient:[radial 0,0,200000 from:white to:black]
